Fixed signature jumping when link was activated

--- a/src/stylesheets/components.scss
+++ b/src/stylesheets/components.scss
@@ -78,3 +78,6 @@ a:hover {
   font-family: 'Merienda', cursive;
   color: $sangria;
 }
+.blog {
+  line-height: 1.4em;
+}
